fixed issue where navbar was being covered by flexbox elements

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@
     align-content: center;
     justify-content: center;
     justify-items: center;
-
+    z-index:1;
 }
 
 #bio {
